# Soul-Restaurant

./: .gitignore
Restaurant/: AboutWidget.cpp  AboutWidget.h  AboutWidget.ui  CMakeLists.txt  Config.cpp  Config.h  Customer.cpp  Customer.h  DataBaseManager.cpp  DataBaseManager.h  Debug.cpp  Debug.h  DebugWidget.cpp  DebugWidget.h  DebugWidget.ui  MyQtTools.hpp  RestaurantDataBase.db  Test.hpp  User.cpp  User.h  main.cpp
Restaurant/AdminPage/: AdminMainWindow.cpp  AdminMainWindow.h  AdminMainWindow.ui  Admin_MenuMgr.cpp  Admin_MenuMgr.h  Admin_MenuMgr.ui  Admin_OrderMgr.cpp  Admin_OrderMgr.h  Admin_OrderMgr.ui  Admin_TableMgr.cpp  Admin_TableMgr.h  Admin_TableMgr.ui  Admin_UserMgr.cpp  Admin_UserMgr.h  Admin_UserMgr.ui  MenuMgr_AddMeal.cpp  MenuMgr_AddMeal.h  MenuMgr_AddMeal.ui  TableMgr_Modify.cpp  TableMgr_Modify.h  TableMgr_Modify.ui
Restaurant/LoginPage/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui
Restaurant/UserPage/: MealOrderDialog.cpp  MealOrderDialog.h  MealOrderDialog.ui  OrderMealDialog.cpp  OrderMealDialog.h  OrderMealDialog.ui  PayDepositDialog.cpp  PayDepositDialog.h  PayDepositDialog.ui  UserMainWindow.cpp  UserMainWindow.h  UserMainWindow.ui  User_CreateOrder.cpp  User_CreateOrder.h  User_CreateOrder.ui  User_MyOrder.cpp  User_MyOrder.h  User_MyOrder.ui  User_TableInfo.cpp  User_TableInfo.h  User_TableInfo.ui  User_UserInfo.cpp  User_UserInfo.h  User_UserInfo.ui
